# mqui

./: Cargo.toml
src/app/: config_profiles.rs  events.rs  mod.rs
src/client/: mod.rs
src/models/: ipc.rs  mqtt.rs
src/ui/: mod.rs
