[package]
name = "mqui"
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/jotrorox/mqui"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
mqtt-endpoint-tokio = "0.6.5"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync", "macros"] }
directories = "6"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dist]
inherits = "release"
lto = "thin"
